2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* e-dialog-utils.c: (e_notice):
	* e-passwords.c: (ep_ask_password):
	Don't call gtk_dialog_set_has_separator on Gtk Message Dialog 
	with GTK+ >= 2.4.0.

2004-08-13  Rodrigo Moya <rodrigo@novell.com>

	* e-categories-config.c: include gtkdialog.h rather than gnome-dialog.h.

2004-08-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* e-dialog-utils.c: Optionally use GtkFileChooser if compiled
	against Gtk+ >= 2.4.0

2004-08-10  Not Zed  <NotZed@Ximian.com>

	** See bug #61840, and others.

	* e-passwords.c: Lots of changes.  The api is now fully
	multi-thread safe, all calls are serialised internally, even
	recursive main-loop calls.  Small api changes to the
	ask_password call to add some new features required by the mailer
	and to clean up some of the names.
	(e_passwords_cancel): new procedure to cancel any outstanding
	password requests, for when we need to go uninteractive.

2004-08-09  Rodney Dawes  <dobey@novell.com>

	* e-icon-factory.c (icon_foreach_remove): We must return TRUE here
	so that things actually get removed from the list

2004-08-05  Rodrigo Moya <rodrigo@novell.com>

	* e-icon-factory.c (e_icon_factory_init): connect to "changed"
	signal on the GnomeIconTheme object.
	(icon_theme_changed_cb): g_hash_table_foreach_remove all items in the
	hash table.
	(icon_foreach_remove): callback for removing hash table items.

2004-08-05  Rodrigo Moya <rodrigo@novell.com>

	Fixes #62030

	* e-icon-factory.c (load_icon): get the icon_key as a new argument
	and use that in the call to icon_new().
	(e_icon_factory_get_icon): pass icon_key to load_icon().
	(e_icon_factory_get_icon_list): ditto.

2004-08-01  JP Rosevear  <jpr@novell.com>

	* e-pilot-util.c (e_pilot_get_sync_source): find the source with
	the pilot-sync property
	(e_pilot_set_sync_source): give the source the pilot-sync property
	and make sure its the only one

	* e-pilot-util.h: add prototypes
